fix: add flex-no-wrap

--- a/src/assert/atom.less
+++ b/src/assert/atom.less
@@ -114,6 +114,9 @@ flex-fixed:固定大小
 .flex-wrap {
     flex-wrap: wrap;
 }
+.flow-no-wrap{
+    flex-wrap: nowrap;
+}
 
 .flex-full {
     display        : flex;
